--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -369,7 +369,7 @@ clean:
 	rm -f ../../common/*.o
 	rm -f ../../../common/*.o
 	rm -f ../../../vscp/common/*.o
-	rm *.deb
+	rm -f *.deb
 	rm -f vscpd
 
 distclean: clean
