--- a/src/vscp/drivers/level2/wire1/linux/Makefile.in
+++ b/src/vscp/drivers/level2/wire1/linux/Makefile.in
@@ -153,6 +153,8 @@ clean:
 	rm -f ../../../../../common/*.o
 	rm -f vscpl2drv-wire1.so
 	rm -f test
+	rm -f *.deb
+	rm -f *.gz
 
 distclean: clean
 	rm -f config.cache config.log config.status bk-deps bk-make-pch shared-ld-sh Makefile
