--- a/src/vscp/vscp-mkpasswd/Makefile.in
+++ b/src/vscp/vscp-mkpasswd/Makefile.in
@@ -132,6 +132,8 @@ clean:
 	rm -f ./*.o
 	rm -f ../common/*.o
 	rm -f vscp-mkpasswd
+	rm -f *.deb
+	rm -f *.gz
 
 distclean: clean
 	rm -f config.cache config.log config.status bk-deps bk-make-pch shared-ld-sh Makefile
