--- a/src/vscp/linuxvscpl1/Makefile.in
+++ b/src/vscp/linuxvscpl1/Makefile.in
@@ -160,6 +160,8 @@ clean:
 	rm -f ../../../../common/*.o
 	rm -f libvscpl1.so
 	rm -f test
+	rm -f *.deb
+	rm -f *.gz
 
 distclean: clean
 	rm -f config.cache config.log config.status bk-deps bk-make-pch shared-ld-sh Makefile
