--- a/src/vscp/uvscpd/Makefile.in
+++ b/src/vscp/uvscpd/Makefile.in
@@ -143,6 +143,8 @@ clean:
 	rm -f ../common/*.o
 	rm -f ../../common/*.o
 	rm -f uvscpd
+	rm -f *.deb
+	rm -f *.gz
 
 distclean: clean
 	rm -f config.cache config.log config.status bk-deps bk-make-pch shared-ld-sh Makefile
