--- a/src/vscp/vscpworks/Makefile.in
+++ b/src/vscp/vscpworks/Makefile.in
@@ -305,6 +305,8 @@ clean:
 	rm -f ../common/*.o
 	rm -f ../../common/*.o
 	rm -f vscpworks
+	rm -f *.deb
+	rm -f *.gz
 
 distclean: clean
 	rm -f config.cache config.log config.status bk-deps bk-make-pch shared-ld-sh Makefile
