--- a/Makefile.in
+++ b/Makefile.in
@@ -14,6 +14,7 @@ all:
 	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
 	echo "Building in dir " $$d && echo "====================================================" && cd $$d && $(MAKE)); done
 
+
 clean:
 	@for d in $(PROJ_SUBDIRS); do (cd $$d && $(MAKE) clean); done
 
@@ -94,3 +95,8 @@ delete-all:
 	rm -rf @VSCPDIR@/*
 
 clean-conf: delete-all force-conf
+
+deb:
+	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
+	echo "Building deb in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) deb ); done
+
