--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -282,10 +282,8 @@ vscpd: $(VSCPD_OBJECTS)
 	$(CXX) -o $@ $(VSCPD_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
 
 install: all
-	
 	$(STRIP) vscpd
 	$(INSTALL_PROGRAM) vscpd $(bindir)
-	
 	# create folder structure
 	mkdir -p @VSCPDIR@
 	mkdir -p @VSCPDIR@/logs
@@ -307,50 +305,43 @@ install: all
 	mkdir -p @VSCPDIR@/vscp
 	mkdir -p @VSCPDIR@/tables
 	mkdir -p @VSCPDIR@/mdf
-
 	# startup script
-	if [ ! -f /etc/init.d/vscpd ]; then
-	    $(INSTALL_PROGRAM) -b -m755 ../../../../config_examples/vscpd.startup_script_debian /etc/init.d/vscpd
-	    update-rc.d vscpd defaults
+	@if [ ! -f "/etc/init.d/vscpd" ]; then\
+	    $(INSTALL_PROGRAM) -b -m755 ../../../../config_examples/vscpd.startup_script_debian /etc/init.d/vscpd;\
+	    update-rc.d vscpd defaults;\
 	fi
-
 	# main configuration file
 	mkdir -p /etc/vscp
-	if [ ! -f /etc/vscp/vscpd.conf ]; then
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf
-	else
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf.`date +'%Y%m%d'`
+	@if [ ! -f "/etc/vscp/vscpd.conf" ]; then\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf;\
+	else\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
 	fi
-
 	# Example variables
-	if [ ! -f @VSCPDIR@/variables.xml ]; then
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/variables.xml_distro @VSCPDIR@/variables.xml
-	else
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/variables.xml_distro @VSCPDIR@/variables.xml.`date +'%Y%m%d'`
+	@if [ ! -f "@VSCPDIR@/variables.xml" ]; then\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/variables.xml_distro @VSCPDIR@/variables.xml;\
+	else\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/variables.xml_distro @VSCPDIR@/variables.xml.`date +'%Y%m%d'`;\
 	fi
-	
 	# Example DM
-	if [ ! -f @VSCPDIR@/dm.xml ]; then
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml
-	else
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml.`date +'%Y%m%d'`
+	@if [ ! -f "@VSCPDIR@/dm.xml" ]; then\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml;\
+	else\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
 	fi
-
 	# Sample data for simulation
-	if [ ! -f @VSCPDIR@/simtempdata.txt ]; then
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt
-	else
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt.`date +'%Y%m%d'`
+	@if [ ! -f "@VSCPDIR@/simtempdata.txt" ]; then\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt;\
+	else\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt.`date +'%Y%m%d'`;\
 	fi
-
 	# Server sample certificat
-	if [ ! -f @VSCPDIR@/certs/server.pem ]; then
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/server.pem @VSCPDIR@/certs
+	@if [ ! -f "@VSCPDIR@/certs/server.pem" ]; then\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/server.pem @VSCPDIR@/certs;\
 	fi
-
 	# Client sample certificat
-	if [ ! -f @VSCPDIR@/certs/client.pem ]; then
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/client.pem @VSCPDIR@/certs
+	@if [ ! -f "@VSCPDIR@/certs/client.pem" ]; then\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/client.pem @VSCPDIR@/certs;\
 	fi
 
 uninstall:
@@ -359,8 +350,8 @@ install-strip: install
 
 deb:    all
 	echo "\n" | ./builddist.sh
-	mkdir ../../../../dist
-	cp *.deb ../../../../dist
+	@mkdir -p ../../../../dist
+	@cp *.deb ../../../../dist
 
 clean:
 	rm -rf ./.deps ./.pch
