--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -285,62 +285,77 @@ install: all
 	$(STRIP) vscpd
 	$(INSTALL_PROGRAM) vscpd $(bindir)
 	# create folder structure
-	mkdir -p @VSCPDIR@
-	mkdir -p @VSCPDIR@/logs
-	mkdir -p @VSCPDIR@/actions
-	mkdir -p @VSCPDIR@/scripts
-	mkdir -p @VSCPDIR@/scripts/javascript
-	mkdir -p @VSCPDIR@/scripts/lua
-	mkdir -p @VSCPDIR@/ux
-	mkdir -p @VSCPDIR@/web
-	mkdir -p @VSCPDIR@/certs
-	mkdir -p @VSCPDIR@/drivers
-	mkdir -p @VSCPDIR@/drivers/level1
-	mkdir -p @VSCPDIR@/drivers/level2
-	mkdir -p @VSCPDIR@/upload
-	mkdir -p @VSCPDIR@/web/css
-	mkdir -p @VSCPDIR@/web/images
-	mkdir -p @VSCPDIR@/web/lib
-	mkdir -p @VSCPDIR@/web/testws
-	mkdir -p @VSCPDIR@/vscp
-	mkdir -p @VSCPDIR@/tables
-	mkdir -p @VSCPDIR@/mdf
+	@mkdir -p @VSCPDIR@
+	@mkdir -p @VSCPDIR@/logs
+	@mkdir -p @VSCPDIR@/actions
+	@mkdir -p @VSCPDIR@/scripts
+	@mkdir -p @VSCPDIR@/scripts/javascript
+	@mkdir -p @VSCPDIR@/scripts/lua
+	@mkdir -p @VSCPDIR@/ux
+	@mkdir -p @VSCPDIR@/web
+	@mkdir -p @VSCPDIR@/certs
+	@mkdir -p @VSCPDIR@/drivers
+	@mkdir -p @VSCPDIR@/drivers/level1
+	@mkdir -p @VSCPDIR@/drivers/level2
+	@mkdir -p @VSCPDIR@/upload
+	@mkdir -p @VSCPDIR@/web/css
+	@mkdir -p @VSCPDIR@/web/images
+	@mkdir -p @VSCPDIR@/web/lib
+	@mkdir -p @VSCPDIR@/web/testws
+	@mkdir -p @VSCPDIR@/vscp
+	@mkdir -p @VSCPDIR@/tables
+	@mkdir -p @VSCPDIR@/mdf
+	@mkdir -p @VSCPDIR@/.tmp
+	
 	# startup script
-	@if [ ! -f "/etc/init.d/vscpd" ]; then\
+	@$(INSTALL_PROGRAM) ../../../../config_examples/vscpd.startup_script_debian @VSCPDIR@/.tmp
+	@if [ ! -e /etc/init.d/vscpd ]; then\
 	    $(INSTALL_PROGRAM) -b -m755 ../../../../config_examples/vscpd.startup_script_debian /etc/init.d/vscpd;\
 	    update-rc.d vscpd defaults;\
 	fi
+	
 	# main configuration file
-	mkdir -p /etc/vscp
-	@if [ ! -f "/etc/vscp/vscpd.conf" ]; then\
+	@$(INSTALL_PROGRAM) ../../../../config_examples/vscpd.conf_unix_distro /srv/.tmp
+	@mkdir -p /etc/vscp
+	@if [ ! -e /etc/vscp/vscpd.conf ]; then\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf;\
 	else\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
 	fi
+	
 	# Example variables
-	@if [ ! -f "@VSCPDIR@/variables.xml" ]; then\
+	@$(INSTALL_PROGRAM) ../../../../config_examples/variables.xml_distro @VSCPDIR@/.tmp
+	@if [ ! -e @VSCPDIR@/variables.xml ]; then\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/variables.xml_distro @VSCPDIR@/variables.xml;\
 	else\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/variables.xml_distro @VSCPDIR@/variables.xml.`date +'%Y%m%d'`;\
 	fi
+	
 	# Example DM
-	@if [ ! -f "@VSCPDIR@/dm.xml" ]; then\
+	@$(INSTALL_PROGRAM) ../../../../config_examples/dm.xml_distro @VSCPDIR@/.tmp
+	@if [ ! -e @VSCPDIR@/dm.xml ]; then\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml;\
 	else\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
 	fi
+	
 	# Sample data for simulation
-	@if [ ! -f "@VSCPDIR@/simtempdata.txt" ]; then\
+	@$(INSTALL_PROGRAM) ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/.tmp
+	@if [ ! -e @VSCPDIR@/simtempdata.txt ]; then\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt;\
 	else\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt.`date +'%Y%m%d'`;\
 	fi
+	
 	# Server sample certificat
-	@if [ ! -f "@VSCPDIR@/certs/server.pem" ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/server.pem @VSCPDIR@/certs;\
+	@$(INSTALL_PROGRAM) ../../../../config_examples/certs/server.pem @VSCPDIR@/.tmp
+	@if [ ! -e @VSCPDIR@/certs/server.pem ]; then\
+            $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/server.pem @VSCPDIR@/certs;\
 	fi
+	
 	# Client sample certificat
-	@if [ ! -f "@VSCPDIR@/certs/client.pem" ]; then\
+	@$(INSTALL_PROGRAM) ../../../../config_examples/certs/client.pem @VSCPDIR@/.tmp
+	@if [ ! -e @VSCPDIR@/certs/client.pem ]; then\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/client.pem @VSCPDIR@/certs;\
 	fi
 
