rename the temp install folder

--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -285,13 +285,13 @@ vscpd: $(VSCPD_OBJECTS)
 debinst: all
 	$(STRIP) vscpd
 	$(INSTALL_PROGRAM) vscpd /usr/bin
-	@$(INSTALL_PROGRAM) ../../../../config_examples/vscpd.startup_script_debian_debinst @VSCPDIR@/.tmp
-	@$(INSTALL_PROGRAM) ../../../../config_examples/vscpd.conf_unix_distro @VSCPDIR@/.tmp
-	@$(INSTALL_PROGRAM) ../../../../config_examples/variables.xml_distro @VSCPDIR@/.tmp
-	@$(INSTALL_PROGRAM) ../../../../config_examples/dm.xml_distro @VSCPDIR@/.tmp
-	@$(INSTALL_PROGRAM) ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/.tmp
-	@$(INSTALL_PROGRAM) ../../../../config_examples/certs/server.pem @VSCPDIR@/.tmp
-	@$(INSTALL_PROGRAM) ../../../../config_examples/certs/client.pem @VSCPDIR@/.tmp
+	@cp ../../../../config_examples/vscpd.startup_script_debian_debinst @VSCPDIR@/tmp
+	@cp ../../../../config_examples/vscpd.conf_unix_distro @VSCPDIR@/tmp
+	@cp ../../../../config_examples/variables.xml_distro @VSCPDIR@/tmp
+	@cp ../../../../config_examples/dm.xml_distro @VSCPDIR@/tmp
+	@cp ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/tmp
+	@cp ../../../../config_examples/certs/server.pem @VSCPDIR@/tmp
+	@cp ../../../../config_examples/certs/client.pem @VSCPDIR@/tmp
 
 install: all
 	$(STRIP) vscpd
@@ -317,7 +317,7 @@ install: all
 	@mkdir -p @VSCPDIR@/vscp
 	@mkdir -p @VSCPDIR@/tables
 	@mkdir -p @VSCPDIR@/mdf
-	@mkdir -p @VSCPDIR@/.tmp
+	@mkdir -p @VSCPDIR@/tmp
 
 	# startup script
 	@if [ ! -e /etc/init.d/vscpd ]; then\
