Moved files to dist insteady of copy to prevent to much garbage in the file structure

--- a/.gitignore
+++ b/.gitignore
@@ -279,6 +279,9 @@ tests/udp/receive_vscp_udp_frame
 tests/udp/send_vscp_udp_frame
 src/vscp/helperlib/linux/libvscphelper-dev_12.29.0-1_amd64.deb
 src/vscp/helperlib/linux/libvscphelper.so.12.29.0
+src/vscp/vscp-mkpasswd/vscp-mkpasswd
+src/vscp/helperlib/linux/libvscphelper.so.*
+src/vscp/linuxvscpl1/libvscpl1.so.*
 
 /.metadata/
 .cproject
