--- a/src/vscp/vscpworks/Makefile.in
+++ b/src/vscp/vscpworks/Makefile.in
@@ -297,7 +297,7 @@ install-strip: install
 deb:    all
 	echo "\n" | ./builddist.sh
 	@mkdir -p ../../../dist
-	@cp *.deb ../../../dist
+	@mv *.deb ../../../dist
 
 clean:
 	rm -rf ./.deps ./.pch
