--- a/src/vscp/drivers/level1/socketcan/linux/Makefile.in
+++ b/src/vscp/drivers/level1/socketcan/linux/Makefile.in
@@ -108,7 +108,7 @@ install-strip: install
 deb:    all
 	echo "\n" | ./builddist.sh
 	@mkdir -p ../../../../../../dist
-	@cp *.deb ../../../../../../dist
+	@mv *.deb ../../../../../../dist
 
 clean: 
 	rm -rf ./.deps ./.pch
