Added libc6 as a dependency

--- a/src/vscp/drivers/level2/tcpdrv/linux/Makefile.in
+++ b/src/vscp/drivers/level2/tcpdrv/linux/Makefile.in
@@ -143,7 +143,7 @@ install-strip: install
 deb:    all
 	echo "\n" | ./builddist.sh
 	@mkdir -p ../../../../../../dist
-	@cmv *.deb ../../../../../../dist
+	@mv *.deb ../../../../../../dist
 
 clean: 
 	rm -rf ./.deps ./.pch
