--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -93,6 +93,7 @@ VSCPD_OBJECTS =  vscpd.o \
 	knownnodes.o \
 	duktape_vscp.o \
 	vscp_javascript.o \
+	vscp_lua.o \
 	jsonreader.o \
 	jsonwriter.o \
 	jsonval.o \
@@ -189,6 +190,9 @@ duktape_vscp.o: ../../common/duktape_vscp.cpp ../../common/duktape_vscp.h
 
 vscp_javascript.o: ../../common/vscp_javascript.cpp ../../common/vscp_javascript.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/vscp_javascript.cpp -o $@
+
+vscp_lua.o: ../../common/vscp_lua.cpp ../../common/vscp_lua.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/vscp_lua.cpp -o $@	
 
 jsonreader.o: ../../../common/jsonreader.cpp ../../../common/wx/jsonreader.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../common/jsonreader.cpp -o $@
