--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@
 language: cpp
 
 before-install:
-  - sudo apt-get -qq update
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq g++-5
   - sudo apt-get install -y build-essential 
   - sudo apt-get install -y libwxgtk3.0-dev  
   - sudo apt-get install -y libssl-dev 
