Fixed build errors for VSCP Works

--- a/src/vscp/vscpworks/Makefile.in
+++ b/src/vscp/vscpworks/Makefile.in
@@ -40,7 +40,7 @@ WARNINGS_MEDIUM = -Wformat-security -Wformat=2
 MONGOOSE_CFLAGS = -DMG_ENABLE_THREADS -DMG_ENABLE_IPV6 -DMG_ENABLE_SSL  -DMG_ENABLE_GETADDRINFO
 CFLAGS = -std=c99 @CFLAGS@ @WXGTK_CFLAGS@ -DCBC -I../common -I../../common
 
-CXXFLAGS = @CXXFLAGS@ @WXGTK_CXXFLAGS@
+CXXFLAGS = -std=c++11 @CXXFLAGS@ @WXGTK_CXXFLAGS@
 CPPFLAGS = @CPPFLAGS@ @WXGTK_CPPFLAGS@ -DwxUSE_GUI=1 $(MONGOOSE_CFLAGS) -I. -I../common -I../../common
 LDFLAGS = @LDFLAGS@
 LDFLAGS = @LDFLAGS@
