--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before-install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
   - sudo apt-get install -qq g++-5
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
   - sudo apt-get install -y build-essential 
   - sudo apt-get install -y libwxgtk3.0-dev  
   - sudo apt-get install -y libssl-dev 
