--- a/src/vscp/helperlib/windows/VSCP helper dll.vcxproj
+++ b/src/vscp/helperlib/windows/VSCP helper dll.vcxproj
@@ -423,7 +423,11 @@ copy  /Y "$(OutDir)/$(TargetName).lib" "$(VSCP_INSTALL)\files\$(PlatformTarget)"
   <ItemGroup>
     <ClCompile Include="..\..\..\common\crc8.c" />
     <ClCompile Include="..\..\..\common\crc.c" />
+    <ClCompile Include="..\..\..\common\fastpbkdf2.c" />
     <ClCompile Include="..\..\..\common\mongoose.c" />
+    <ClCompile Include="..\..\..\common\vscpbase64.c" />
+    <ClCompile Include="..\..\..\common\vscpmd5.c" />
+    <ClCompile Include="..\..\..\common\vscp_aes.c" />
     <ClCompile Include="..\..\common\guid.cpp" />
     <ClCompile Include="..\..\common\vscphelper.cpp" />
     <ClCompile Include="..\..\common\vscpremotetcpif.cpp" />
@@ -435,7 +439,11 @@ copy  /Y "$(OutDir)/$(TargetName).lib" "$(VSCP_INSTALL)\files\$(PlatformTarget)"
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\common\fastpbkdf2.h" />
     <ClInclude Include="..\..\..\common\mongoose.h" />
+    <ClInclude Include="..\..\..\common\vscpbase64.h" />
+    <ClInclude Include="..\..\..\common\vscpmd5.h" />
+    <ClInclude Include="..\..\..\common\vscp_aes.h" />
     <ClInclude Include="..\..\common\guid.h" />
     <ClInclude Include="..\..\common\vscp.h" />
     <ClInclude Include="..\..\common\vscpremotetcpif.h" />
